--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 rocket = { version = "0.5.0-rc.1", features = ["json"] }
 chrono = "0.4"
 rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
+rand = "0.8"
